--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/greenhouseDB
 quarkus.datasource.username=root
+quarkus.hibernate-orm.schema-management.strategy=drop-and-create
