--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
             <artifactId>quarkus-jdbc-mysql</artifactId>
         </dependency>
         <dependency>
-      		<groupId>io.quarkus</groupId>
-      		<artifactId>quarkus-resteasy</artifactId>
-    	</dependency>
+    		<groupId>io.quarkus</groupId>
+    		<artifactId>quarkus-resteasy-jackson</artifactId>
+		</dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
