--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     		<groupId>io.quarkus</groupId>
     		<artifactId>quarkus-hibernate-orm</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.21.2</version>
+		</dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
